<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--<com.example.prototype2.Marker.MovableFloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:src="@android:drawable/ic_menu_call"-->
        <!--app:backgroundTint="#e0FFFFFF"-->
        <!--app:elevation="6dp"-->
        <!--app:fabSize="mini"-->
        <!--app:layout_anchor="@+id/linearLayout"-->
        <!--app:layout_anchorGravity="right|center"-->
        <!--app:pressedTranslationZ="12dp"-->
        <!--app:rippleColor="#33728dff" />-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/blank"
            android:layout_width="match_parent"
            android:layout_height="300px"
            android:orientation="horizontal" />
    </LinearLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="300px"
        android:background="@drawable/bs_bg"
        app:behavior_peekHeight="300px"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="70px"
                android:layout_height="25px"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="3dp"
                android:background="@drawable/up" />

            <TextView
                android:id="@+id/notice"
                android:layout_width="match_parent"
                android:layout_height="300px"
                android:gravity="center"
                android:text="請點選標記以確認資訊!"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/markerCheckbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="15px">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="100px"
                            android:layout_height="100px"
                            android:layout_margin="5dp"
                            android:background="@drawable/policeicon" />

                        <CheckBox
                            android:id="@+id/chungcheng"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:checked="true"
                            android:text="學校警衛室" />
                            <!--android:text="@string/marker_title_chungcheng" />-->
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/logo_family" />

                        <CheckBox
                            android:id="@+id/family"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:checked="true"
                            android:text="@string/marker_title_family" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/logo_seven11" />

                        <CheckBox
                            android:id="@+id/seven11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:checked="true"
                            android:text="@string/marker_title_seven11" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/logo_aed" />

                        <CheckBox
                            android:id="@+id/aed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:checked="true"
                            android:text="@string/marker_title_AED" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@drawable/logo_phone" />

                        <CheckBox
                            android:id="@+id/phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:checked="true"
                            android:text="@string/marker_title_phone" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:id="@+id/infoup"
                    android:layout_width="match_parent"
                    android:layout_height="300px"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/img_icon"
                            android:layout_width="120px"
                            android:layout_height="120px"
                            android:layout_marginLeft="20px"
                            android:layout_marginRight="20px" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tvTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="#000000"
                                android:textSize="20dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tvSnippet"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:textColor="#000000"
                                android:textSize="18dp" />

                        </LinearLayout>

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/btn_cross"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="30px"
                            android:src="@android:drawable/ic_menu_close_clear_cancel"
                            app:backgroundTint="@android:color/holo_red_light"
                            app:fabSize="mini" />

                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/nowInfo"
                    android:layout_width="match_parent"
                    android:layout_height="300px"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="#000000"
                    android:textSize="18dp" />

                <LinearLayout
                    android:id="@+id/infodown"
                    android:layout_width="match_parent"
                    android:layout_height="300px"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <ImageView
                        android:id="@+id/img"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:layout_weight="1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:orientation="vertical">

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/btn_direct"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@android:drawable/ic_menu_directions"
                            app:backgroundTint="@android:color/holo_orange_dark"
                            app:fabSize="normal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="路線規劃"
                            android:textColor="#000000"
                            android:textSize="15dp" />

                        <android.support.design.widget.FloatingActionButton
                            android:id="@+id/btn_here"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@android:drawable/ic_menu_myplaces"
                            app:backgroundTint="@android:color/holo_green_light"
                            app:fabSize="normal" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="標記位置"
                            android:textColor="#000000"
                            android:textSize="15dp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>